# Synapse

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  chaos-ci.yml  ci.yml  docker-release.yml
charts/synapse/: Chart.yaml  values.yaml
charts/synapse/templates/: _helpers.tpl  configmap.yaml  (+2 more)
docker/: Caddyfile  Dockerfile.node  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  FORMALISM.md  THREAT_MODEL.md  USER_GUIDE.md
docs/adr/: 001-adoption-of-curvezmq.md  001-distributed-sensor-monitor-architecture.md  002-adoption-of-zeromq.md  003-adoption-of-pub-sub-pattern.md  004-node-registry-and-heartbeat-lifecycle.md  005-adoption-of-docker.md  006-adoption-of-curvezmq.md  ADR-007-P2P-Mesh.md  README.md
src/: main_node.py
src/core/: corroboration.py  event_logger.py  garbage_collector.py  node_registry.py  registry_store.py
src/dashboard/: index.html
src/network/: __init__.py  http_server.py  peer_discovery.py  zmq_curve.py  zmq_mesh.py
tests/integration/: __init__.py  test_h3_api.py  test_mesh_flow.py
tests/unit/: test_corroboration.py  test_event_logger.py  test_garbage_collector.py  test_http_server.py  test_main_node.py  test_node_registry.py  test_peer_discovery.py  test_rate_limiter.py  test_registry_sqlite.py  test_zeroconf_discovery.py  test_zmq_curve.py  test_zmq_mesh_limits.py
tools/: benchmark.py  chaos_monkey.py  ci_chaos_smoke.py  generate_curve_setup.py
(+2 files in other folders)
