[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Synapse"
version = "0.2.0"
description = "Decentralized P2P Headless Daemon - Edge-First IoT Network"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pyzmq>=26.0",
    "h3>=3.7",
    "flask>=3.0",
    "waitress>=3.0",
    "zeroconf>=0.132.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "mypy>=1.15",
    "types-waitress",
    "build",
    "twine",
]

chaos = [
    "docker>=7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests", "tools"]
exclude = [
    ".eggs",
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
# Docstrings, logs, and SQL often exceed 88 chars; formatter wraps code paths.
extend-ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
